--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "todo-app",
+  "name": "env-monitor-mern",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "dev": "nodemon server.js",    
+    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client",
     "data:import": "node seeder.js",
-  "data:destroy": "node seeder.js -d"
+    "data:destroy": "node seeder.js -d"
   },
   "dependencies": {
     "axios": "^1.7.7",
