--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",    
-    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client",
+    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client && npm i vite --prefix ../client",
     "data:import": "node seeder.js",
     "data:destroy": "node seeder.js -d"
   },
