--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1",
-    "vite": "^5.4.10"
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -28,7 +28,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "globals": "^15.11.0"
   }
 }
