--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,13 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "@vitejs/plugin-react": "^4.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
